[gd_scene load_steps=22 format=3 uid="uid://bpjhx0g61ptyq"]

[ext_resource type="Script" uid="uid://wyeymr4vku74" path="res://addons/curved_lines_2d/examples/pinball/game.gd" id="1_eow3j"]
[ext_resource type="Script" uid="uid://de3jpss66xjfh" path="res://addons/curved_lines_2d/scalable_vector_shape_2d.gd" id="2_j5wjh"]
[ext_resource type="Script" uid="uid://dlbv4pit17dnu" path="res://addons/curved_lines_2d/scalable_arc.gd" id="3_vef74"]
[ext_resource type="Script" uid="uid://dl1t88tthmwts" path="res://addons/curved_lines_2d/scalable_arc_list.gd" id="4_hve3p"]
[ext_resource type="PackedScene" uid="uid://c4qvvoxq5w28e" path="res://addons/curved_lines_2d/examples/pinball/flipper.tscn" id="5_mfdv2"]
[ext_resource type="PackedScene" uid="uid://bwxjc7a0mapl0" path="res://addons/curved_lines_2d/examples/pinball/pinball.tscn" id="6_iotsf"]
[ext_resource type="PackedScene" uid="uid://cisphek1rg6t6" path="res://addons/curved_lines_2d/examples/pinball/butterfly.scn" id="6_j6l5u"]
[ext_resource type="PackedScene" uid="uid://de7qp86gcbt0j" path="res://addons/curved_lines_2d/examples/pinball/chasing_light.tscn" id="7_lc2xo"]

[sub_resource type="Curve2D" id="Curve2D_ipynf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -576, -584, 0, 0, 0, 0, 576, -584, 0, 0, 0, 0, 576, 1440, 0, 0, 0, 0, -576, 1440, 0, 0, 0, 0, -576, -584)
}
point_count = 5

[sub_resource type="Resource" id="Resource_dpgl4"]
script = ExtResource("4_hve3p")
arcs = Array[ExtResource("3_vef74")]([])

[sub_resource type="Gradient" id="Gradient_8lkhd"]
colors = PackedColorArray(1, 0.613281, 0.613281, 1, 1, 0.421875, 0.421875, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mpo7f"]
gradient = SubResource("Gradient_8lkhd")
width = 1152
height = 2024
fill_from = Vector2(0.552951, 0.153472)
fill_to = Vector2(0.510417, 0.762352)

[sub_resource type="Curve2D" id="Curve2D_ara7v"]
_data = {
"points": PackedVector2Array(0, 0, -48, 21.3333, 235.143, -125.429, 0, 0, 91, 100.857, 201, -71.8571, 0, 0, 0, 0, 922, 262, 0, 0, 0, 0, 930, 206, 0, 0, 13.3333, -24, 678.333, -67.3333, 24, 13.3333, 16, -16, 652.667, -127, 53.3333, 625.333, 0, 0, 898, -1218, 0, 0, -22.6667, 726.667, 2, -1218, -16, -16, 0, 0, 235.143, -125.429)
}
point_count = 9

[sub_resource type="Resource" id="Resource_vbn2a"]
script = ExtResource("3_vef74")
start_point = 6
radius = Vector2(448, 448)
rotation_deg = 0.0
sweep_flag = false
large_arc_flag = false

[sub_resource type="Resource" id="Resource_x3eih"]
script = ExtResource("3_vef74")
start_point = 2
radius = Vector2(44, 44)
rotation_deg = 0.0
sweep_flag = false
large_arc_flag = true

[sub_resource type="Resource" id="Resource_gdr51"]
script = ExtResource("3_vef74")
start_point = 0
radius = Vector2(28, 28)
rotation_deg = 0.0
sweep_flag = false
large_arc_flag = false

[sub_resource type="Resource" id="Resource_1vgfy"]
script = ExtResource("3_vef74")
start_point = 4
radius = Vector2(32, 32)
rotation_deg = 0.0
sweep_flag = false
large_arc_flag = false

[sub_resource type="Resource" id="Resource_8v3mp"]
script = ExtResource("4_hve3p")
arcs = Array[ExtResource("3_vef74")]([SubResource("Resource_vbn2a"), SubResource("Resource_x3eih"), SubResource("Resource_gdr51"), SubResource("Resource_1vgfy")])

[sub_resource type="Gradient" id="Gradient_x3eih"]
offsets = PackedFloat32Array(0.752276, 0.836019)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gdr51"]
gradient = SubResource("Gradient_x3eih")
width = 1001
height = 1948
fill = 1
fill_from = Vector2(1.01428, 1.00321)
fill_to = Vector2(0.892115, 0.96797)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vgfy"]
size = Vector2(53, 18)

[node name="Game" type="Node2D"]
script = ExtResource("1_eow3j")

[node name="Rectangle" type="Node2D" parent="." node_paths=PackedStringArray("polygon", "collision_object", "clip_paths")]
position = Vector2(0, -1144)
script = ExtResource("2_j5wjh")
polygon = NodePath("Fill")
collision_object = NodePath("StaticBody2D")
curve = SubResource("Curve2D_ipynf")
update_curve_at_runtime = true
arc_list = SubResource("Resource_dpgl4")
clip_paths = [NodePath("CutoutOfRectangle")]
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Rectangle"]
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rectangle/StaticBody2D"]
polygon = PackedVector2Array(576, 1440, 52.6829, 1440, 52.6829, 1236.91, 145.625, 1278.89, 472, 1408, 473.712, 1410.55, 475.597, 1412.97, 477.647, 1415.26, 479.852, 1417.4, 482.2, 1419.38, 484.68, 1421.19, 487.281, 1422.82, 489.99, 1424.27, 492.793, 1425.53, 495.676, 1426.58, 498.626, 1427.44, 501.629, 1428.08, 504.669, 1428.52, 507.733, 1428.74, 510.804, 1428.74, 513.868, 1428.54, 516.91, 1428.11, 519.915, 1427.48, 522.87, 1426.64, 525.758, 1425.6, 528.566, 1424.36, 531.281, 1422.92, 533.889, 1421.3, 536.378, 1419.5, 538.735, 1417.53, 540.949, 1415.4, 543.009, 1413.12, 544.905, 1410.71, 546.628, 1408.17, 548.17, 1405.51, 549.522, 1402.75, 550.679, 1399.91, 551.634, 1396.99, 552.384, 1394.01, 552.924, 1390.99, 553.252, 1387.93, 553.366, 1384.86, 553.265, 1381.79, 552.951, 1378.74, 552.425, 1375.71, 551.688, 1372.73, 550.746, 1369.81, 549.602, 1366.96, 548.261, 1364.2, 546.732, 1361.53, 545.02, 1358.98, 543.135, 1356.56, 541.085, 1354.27, 538.88, 1352.13, 536.532, 1350.15, 534.051, 1348.34, 531.451, 1346.71, 528.742, 1345.26, 525.939, 1344.01, 523.056, 1342.95, 520.105, 1342.1, 517.103, 1341.45, 514.062, 1341.02, 510.999, 1340.8, 507.928, 1340.79, 504.864, 1341, 501.822, 1341.42, 498.816, 1342.05, 495.862, 1342.89, 492.974, 1343.93, 490.165, 1345.18, 487.451, 1346.61, 484.842, 1348.23, 482.354, 1350.03, 480, 1352, 228.333, 1078.67, 230.383, 1077.7, 232.36, 1076.59, 234.255, 1075.35, 236.058, 1073.97, 237.762, 1072.48, 239.356, 1070.87, 240.835, 1069.15, 242.19, 1067.33, 243.415, 1065.42, 244.504, 1063.44, 245.452, 1061.38, 246.254, 1059.26, 246.906, 1057.08, 247.405, 1054.87, 247.748, 1052.63, 247.934, 1050.37, 247.963, 1048.11, 247.833, 1045.84, 247.545, 1043.6, 247.102, 1041.37, 246.504, 1039.19, 245.755, 1037.05, 244.859, 1034.96, 243.82, 1032.95, 242.643, 1031.01, 241.333, 1029.16, 239.898, 1027.41, 238.344, 1025.76, 236.678, 1024.22, 234.91, 1022.8, 233.046, 1021.51, 231.097, 1020.35, 229.073, 1019.33, 226.982, 1018.46, 224.835, 1017.73, 222.642, 1017.16, 220.415, 1016.73, 218.163, 1016.47, 215.899, 1016.36, 213.633, 1016.41, 211.376, 1016.62, 209.139, 1016.99, 206.932, 1017.51, 204.768, 1018.18, 202.667, 1019, 204.93, 1016.24, 208.645, 1010.98, 219.99, 993.176, 255.25, 929.719, 301.386, 831.652, 351.333, 702, 398.031, 543.785, 434.417, 360.031, 453.427, 153.762, 448, -72, 446.909, -103.251, 443.64, -134.35, 438.21, -165.144, 430.645, -195.486, 420.982, -225.225, 409.268, -254.218, 395.561, -282.323, 379.926, -309.404, 362.44, -335.328, 343.188, -359.969, 322.264, -383.207, 299.771, -404.929, 275.816, -425.029, 250.518, -443.409, 224, -459.979, 196.39, -474.66, 167.824, -487.378, 138.44, -498.073, 108.381, -506.693, 77.7944, -513.194, 52.6828, -516.723, 52.6828, -584, 576, -584)
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Rectangle/StaticBody2D"]
polygon = PackedVector2Array(52.6828, -584, 52.6828, -516.723, 46.8288, -517.546, 15.635, -519.727, -15.635, -519.727, -46.8288, -517.546, -77.7944, -513.194, -108.381, -506.693, -138.44, -498.073, -167.824, -487.378, -196.39, -474.66, -224, -459.979, -250.518, -443.409, -275.816, -425.029, -299.771, -404.929, -322.264, -383.207, -343.188, -359.969, -362.44, -335.328, -379.926, -309.404, -395.561, -282.323, -409.268, -254.218, -420.982, -225.225, -430.645, -195.486, -438.21, -165.144, -443.64, -134.35, -446.909, -103.251, -448, -72, -445.146, 182.923, -423.384, 403.027, -388.412, 588.814, -345.929, 740.786, -301.633, 859.445, -261.223, 945.294, -230.398, 998.836, -220.361, 1013.65, -214.857, 1020.57, -216.767, 1019.45, -218.751, 1018.46, -220.8, 1017.61, -222.902, 1016.9, -225.049, 1016.35, -227.229, 1015.95, -229.431, 1015.69, -231.646, 1015.6, -233.863, 1015.66, -236.07, 1015.87, -238.256, 1016.23, -240.412, 1016.75, -242.526, 1017.42, -244.589, 1018.23, -246.59, 1019.19, -248.52, 1020.28, -250.369, 1021.5, -252.128, 1022.85, -253.788, 1024.32, -255.342, 1025.9, -256.782, 1027.59, -258.101, 1029.37, -259.292, 1031.24, -260.35, 1033.19, -261.269, 1035.2, -262.046, 1037.28, -262.675, 1039.41, -263.155, 1041.57, -263.483, 1043.76, -263.657, 1045.97, -263.676, 1048.19, -263.541, 1050.4, -263.252, 1052.6, -262.81, 1054.78, -262.217, 1056.91, -261.477, 1059, -260.593, 1061.03, -259.569, 1063, -258.411, 1064.89, -257.123, 1066.7, -255.713, 1068.41, -254.187, 1070.02, -252.552, 1071.51, -250.817, 1072.89, -249, 1074.14, -238.925, 1083.97, -225.906, 1094.51, -191.893, 1117.45, -97.9531, 1168.86, 52.6829, 1236.91, 52.6829, 1440, -576, 1440, -576, -584)
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Rectangle/StaticBody2D"]
visible = false
polygon = PackedVector2Array(480.704, 1331.87, 248, 1200, 250.281, 1195.56, 252.125, 1191.25, 253.531, 1187.06, 254.5, 1183, 255.031, 1179.06, 255.125, 1175.25, 254.781, 1171.56, 254, 1168, 252.781, 1164.56, 251.125, 1161.25, 249.031, 1158.06, 246.5, 1155, 243.531, 1152.06, 240.125, 1149.25, 236.281, 1146.56, 232, 1144, 232.922, 1142.84, 234.179, 1140.88, 237.648, 1134.58, 248.063, 1112.8, 280, 1035.19, 366, 764.5, 407.313, 583.336, 439, 379.563, 454.688, 159.133, 448, -72, 446.909, -103.251, 443.64, -134.35, 438.21, -165.144, 430.645, -195.486, 420.982, -225.225, 409.268, -254.218, 395.561, -282.323, 379.926, -309.404, 362.44, -335.328, 343.188, -359.969, 322.264, -383.207, 299.771, -404.929, 275.816, -425.029, 250.518, -443.409, 224, -459.979, 196.39, -474.66, 167.824, -487.378, 138.44, -498.073, 108.381, -506.693, 77.7944, -513.194, 46.8288, -517.546, 20, -519.422, 20, -584, 480.704, -584)
disabled = true
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Rectangle/StaticBody2D"]
visible = false
polygon = PackedVector2Array(20, -584, 20, -519.422, 15.635, -519.727, -15.635, -519.727, -46.8288, -517.546, -77.7944, -513.194, -108.381, -506.693, -138.44, -498.073, -167.824, -487.378, -196.39, -474.66, -224, -459.979, -250.518, -443.409, -275.816, -425.029, -299.771, -404.929, -322.264, -383.207, -343.188, -359.969, -362.44, -335.328, -379.926, -309.404, -395.561, -282.323, -409.268, -254.218, -420.982, -225.225, -430.645, -195.486, -438.21, -165.144, -443.64, -134.35, -446.909, -103.251, -448, -72, -445.883, 188.227, -426.063, 422.313, -354.5, 802.5, -275.688, 1049.44, -246.805, 1116.96, -237.312, 1135.69, -234.092, 1141.17, -232.9, 1142.92, -232, 1144, -240.09, 1148.14, -243.483, 1150.31, -246.469, 1152.53, -249.068, 1154.79, -251.301, 1157.09, -253.188, 1159.41, -254.75, 1161.75, -256.007, 1164.1, -256.98, 1166.44, -257.69, 1168.78, -258.156, 1171.09, -258.4, 1173.38, -258.441, 1175.64, -258.301, 1177.85, -258, 1180, -256.996, 1184.11, -255.594, 1187.91, -253.957, 1191.31, -252.25, 1194.25, -249.281, 1198.47, -248, 1200, -113.016, 1264.75, 18.875, 1316, 20, 1316.32, 20, 1440, -576, 1440, -576, -584)
disabled = true
metadata/_edit_lock_ = true

[node name="Fill" type="Polygon2D" parent="Rectangle"]
texture = SubResource("GradientTexture2D_mpo7f")
texture_offset = Vector2(576, 584)
polygon = PackedVector2Array(576, 1440, 52.6829, 1440, 52.6829, 1236.91, 145.625, 1278.89, 472, 1408, 473.712, 1410.55, 475.597, 1412.97, 477.647, 1415.26, 479.852, 1417.4, 482.2, 1419.38, 484.68, 1421.19, 487.281, 1422.82, 489.99, 1424.27, 492.793, 1425.53, 495.676, 1426.58, 498.626, 1427.44, 501.629, 1428.08, 504.669, 1428.52, 507.733, 1428.74, 510.804, 1428.74, 513.868, 1428.54, 516.91, 1428.11, 519.915, 1427.48, 522.87, 1426.64, 525.758, 1425.6, 528.566, 1424.36, 531.281, 1422.92, 533.889, 1421.3, 536.378, 1419.5, 538.735, 1417.53, 540.949, 1415.4, 543.009, 1413.12, 544.905, 1410.71, 546.628, 1408.17, 548.17, 1405.51, 549.522, 1402.75, 550.679, 1399.91, 551.634, 1396.99, 552.384, 1394.01, 552.924, 1390.99, 553.252, 1387.93, 553.366, 1384.86, 553.265, 1381.79, 552.951, 1378.74, 552.425, 1375.71, 551.688, 1372.73, 550.746, 1369.81, 549.602, 1366.96, 548.261, 1364.2, 546.732, 1361.53, 545.02, 1358.98, 543.135, 1356.56, 541.085, 1354.27, 538.88, 1352.13, 536.532, 1350.15, 534.051, 1348.34, 531.451, 1346.71, 528.742, 1345.26, 525.939, 1344.01, 523.056, 1342.95, 520.105, 1342.1, 517.103, 1341.45, 514.062, 1341.02, 510.999, 1340.8, 507.928, 1340.79, 504.864, 1341, 501.822, 1341.42, 498.816, 1342.05, 495.862, 1342.89, 492.974, 1343.93, 490.165, 1345.18, 487.451, 1346.61, 484.842, 1348.23, 482.354, 1350.03, 480, 1352, 228.333, 1078.67, 230.383, 1077.7, 232.36, 1076.59, 234.255, 1075.35, 236.058, 1073.97, 237.762, 1072.48, 239.356, 1070.87, 240.835, 1069.15, 242.19, 1067.33, 243.415, 1065.42, 244.504, 1063.44, 245.452, 1061.38, 246.254, 1059.26, 246.906, 1057.08, 247.405, 1054.87, 247.748, 1052.63, 247.934, 1050.37, 247.963, 1048.11, 247.833, 1045.84, 247.545, 1043.6, 247.102, 1041.37, 246.504, 1039.19, 245.755, 1037.05, 244.859, 1034.96, 243.82, 1032.95, 242.643, 1031.01, 241.333, 1029.16, 239.898, 1027.41, 238.344, 1025.76, 236.678, 1024.22, 234.91, 1022.8, 233.046, 1021.51, 231.097, 1020.35, 229.073, 1019.33, 226.982, 1018.46, 224.835, 1017.73, 222.642, 1017.16, 220.415, 1016.73, 218.163, 1016.47, 215.899, 1016.36, 213.633, 1016.41, 211.376, 1016.62, 209.139, 1016.99, 206.932, 1017.51, 204.768, 1018.18, 202.667, 1019, 204.93, 1016.24, 208.645, 1010.98, 219.99, 993.176, 255.25, 929.719, 301.386, 831.652, 351.333, 702, 398.031, 543.785, 434.417, 360.031, 453.427, 153.762, 448, -72, 446.909, -103.251, 443.64, -134.35, 438.21, -165.144, 430.645, -195.486, 420.982, -225.225, 409.268, -254.218, 395.561, -282.323, 379.926, -309.404, 362.44, -335.328, 343.188, -359.969, 322.264, -383.207, 299.771, -404.929, 275.816, -425.029, 250.518, -443.409, 224, -459.979, 196.39, -474.66, 167.824, -487.378, 138.44, -498.073, 108.381, -506.693, 77.7944, -513.194, 52.6828, -516.723, 52.6828, -584, 576, -584, 52.6828, -584, 52.6828, -516.723, 46.8288, -517.546, 15.635, -519.727, -15.635, -519.727, -46.8288, -517.546, -77.7944, -513.194, -108.381, -506.693, -138.44, -498.073, -167.824, -487.378, -196.39, -474.66, -224, -459.979, -250.518, -443.409, -275.816, -425.029, -299.771, -404.929, -322.264, -383.207, -343.188, -359.969, -362.44, -335.328, -379.926, -309.404, -395.561, -282.323, -409.268, -254.218, -420.982, -225.225, -430.645, -195.486, -438.21, -165.144, -443.64, -134.35, -446.909, -103.251, -448, -72, -445.146, 182.923, -423.384, 403.027, -388.412, 588.814, -345.929, 740.786, -301.633, 859.445, -261.223, 945.294, -230.398, 998.836, -220.361, 1013.65, -214.857, 1020.57, -216.767, 1019.45, -218.751, 1018.46, -220.8, 1017.61, -222.902, 1016.9, -225.049, 1016.35, -227.229, 1015.95, -229.431, 1015.69, -231.646, 1015.6, -233.863, 1015.66, -236.07, 1015.87, -238.256, 1016.23, -240.412, 1016.75, -242.526, 1017.42, -244.589, 1018.23, -246.59, 1019.19, -248.52, 1020.28, -250.369, 1021.5, -252.128, 1022.85, -253.788, 1024.32, -255.342, 1025.9, -256.782, 1027.59, -258.101, 1029.37, -259.292, 1031.24, -260.35, 1033.19, -261.269, 1035.2, -262.046, 1037.28, -262.675, 1039.41, -263.155, 1041.57, -263.483, 1043.76, -263.657, 1045.97, -263.676, 1048.19, -263.541, 1050.4, -263.252, 1052.6, -262.81, 1054.78, -262.217, 1056.91, -261.477, 1059, -260.593, 1061.03, -259.569, 1063, -258.411, 1064.89, -257.123, 1066.7, -255.713, 1068.41, -254.187, 1070.02, -252.552, 1071.51, -250.817, 1072.89, -249, 1074.14, -238.925, 1083.97, -225.906, 1094.51, -191.893, 1117.45, -97.9531, 1168.86, 52.6829, 1236.91, 52.6829, 1440, -576, 1440, -576, -584)
polygons = [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153], [154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242]]
metadata/_edit_lock_ = true

[node name="CutoutOfRectangle" type="Node2D" parent="Rectangle" node_paths=PackedStringArray("polygon")]
position = Vector2(-450, 1146)
script = ExtResource("2_j5wjh")
polygon = NodePath("Polygon2D")
curve = SubResource("Curve2D_ara7v")
update_curve_at_runtime = true
arc_list = SubResource("Resource_8v3mp")

[node name="Polygon2D" type="Polygon2D" parent="Rectangle/CutoutOfRectangle"]
texture = SubResource("GradientTexture2D_gdr51")
texture_offset = Vector2(-2, 1665.73)
polygon = PackedVector2Array(235.143, -125.429, 233.233, -126.554, 231.249, -127.543, 229.2, -128.392, 227.098, -129.095, 224.951, -129.651, 222.771, -130.055, 220.569, -130.306, 218.354, -130.402, 216.137, -130.344, 213.93, -130.132, 211.744, -129.766, 209.588, -129.248, 207.474, -128.582, 205.411, -127.769, 203.41, -126.815, 201.48, -125.723, 199.631, -124.499, 197.872, -123.149, 196.212, -121.68, 194.658, -120.099, 193.218, -118.413, 191.899, -116.631, 190.708, -114.761, 189.65, -112.813, 188.731, -110.795, 187.954, -108.719, 187.325, -106.593, 186.845, -104.428, 186.517, -102.236, 186.343, -100.025, 186.324, -97.8085, 186.459, -95.5955, 186.748, -93.3974, 187.191, -91.2249, 187.783, -89.0885, 188.523, -86.9986, 189.407, -84.9654, 190.431, -82.9988, 191.589, -81.1085, 192.877, -79.3035, 194.287, -77.5928, 195.813, -75.9846, 197.448, -74.4867, 199.183, -73.1066, 201, -71.8571, 211.075, -62.0258, 224.094, -51.487, 258.107, -28.5547, 352.047, 22.8571, 595.625, 132.893, 922, 262, 923.712, 264.55, 925.597, 266.974, 927.647, 269.261, 929.852, 271.399, 932.2, 273.379, 934.68, 275.189, 937.281, 276.823, 939.99, 278.271, 942.793, 279.526, 945.676, 280.583, 948.626, 281.436, 951.629, 282.081, 954.669, 282.515, 957.733, 282.736, 960.804, 282.743, 963.868, 282.536, 966.91, 282.115, 969.915, 281.483, 972.87, 280.643, 975.758, 279.599, 978.566, 278.356, 981.281, 276.92, 983.889, 275.299, 986.378, 273.499, 988.735, 271.53, 990.949, 269.402, 993.009, 267.124, 994.905, 264.708, 996.628, 262.166, 998.17, 259.51, 999.522, 256.752, 1000.68, 253.907, 1001.63, 250.989, 1002.38, 248.01, 1002.92, 244.987, 1003.25, 241.933, 1003.37, 238.864, 1003.27, 235.795, 1002.95, 232.74, 1002.42, 229.714, 1001.69, 226.733, 1000.75, 223.81, 999.602, 220.96, 998.261, 218.196, 996.732, 215.533, 995.02, 212.983, 993.135, 210.559, 991.085, 208.272, 988.88, 206.134, 986.532, 204.154, 984.051, 202.344, 981.451, 200.71, 978.742, 199.263, 975.939, 198.007, 973.056, 196.95, 970.105, 196.097, 967.103, 195.452, 964.062, 195.018, 960.999, 194.797, 957.928, 194.79, 954.864, 194.997, 951.822, 195.418, 948.816, 196.05, 945.862, 196.89, 942.974, 197.934, 940.165, 199.177, 937.451, 200.613, 934.842, 202.234, 932.354, 204.034, 930, 206, 678.333, -67.3333, 680.383, -68.3015, 682.36, -69.4104, 684.255, -70.6545, 686.058, -72.0277, 687.762, -73.5234, 689.356, -75.1342, 690.835, -76.8524, 692.19, -78.6696, 693.415, -80.5768, 694.504, -82.5649, 695.452, -84.6241, 696.254, -86.7444, 696.906, -88.9154, 697.405, -91.1266, 697.748, -93.3673, 697.934, -95.6264, 697.963, -97.8931, 697.833, -100.156, 697.545, -102.405, 697.102, -104.628, 696.504, -106.814, 695.755, -108.954, 694.859, -111.036, 693.82, -113.051, 692.643, -114.988, 691.333, -116.838, 689.898, -118.593, 688.344, -120.243, 686.678, -121.781, 684.91, -123.198, 683.046, -124.489, 681.097, -125.647, 679.073, -126.666, 676.982, -127.541, 674.835, -128.269, 672.642, -128.844, 670.415, -129.266, 668.163, -129.531, 665.899, -129.638, 663.633, -129.587, 661.376, -129.378, 659.139, -129.013, 656.932, -128.492, 654.768, -127.818, 652.667, -127, 654.93, -129.763, 658.645, -135.019, 669.99, -152.824, 705.25, -216.281, 751.386, -314.348, 801.333, -444, 848.031, -602.215, 884.417, -785.969, 903.427, -992.238, 898, -1218, 896.909, -1249.25, 893.64, -1280.35, 888.21, -1311.14, 880.645, -1341.49, 870.982, -1371.22, 859.268, -1400.22, 845.561, -1428.32, 829.926, -1455.4, 812.44, -1481.33, 793.188, -1505.97, 772.264, -1529.21, 749.771, -1550.93, 725.816, -1571.03, 700.518, -1589.41, 674, -1605.98, 646.39, -1620.66, 617.824, -1633.38, 588.44, -1644.07, 558.381, -1652.69, 527.794, -1659.19, 496.829, -1663.55, 465.635, -1665.73, 434.365, -1665.73, 403.171, -1663.55, 372.206, -1659.19, 341.619, -1652.69, 311.56, -1644.07, 282.176, -1633.38, 253.61, -1620.66, 226, -1605.98, 199.482, -1589.41, 174.184, -1571.03, 150.229, -1550.93, 127.736, -1529.21, 106.812, -1505.97, 87.5604, -1481.33, 70.0745, -1455.4, 54.4395, -1428.32, 40.7316, -1400.22, 29.0177, -1371.22, 19.3548, -1341.49, 11.7899, -1311.14, 6.35991, -1280.35, 3.09131, -1249.25, 2, -1218, 4.85379, -963.077, 26.6161, -742.973, 61.5882, -557.186, 104.071, -405.214, 148.367, -286.555, 188.777, -200.706, 219.602, -147.164, 229.639, -132.352)
metadata/_edit_lock_ = true

[node name="LeftFlipper" parent="." instance=ExtResource("5_mfdv2")]
position = Vector2(-232, -96)

[node name="RightFlipper" parent="." instance=ExtResource("5_mfdv2")]
position = Vector2(216, -96)
scale = Vector2(-1, 1)
flipping_up = true

[node name="Butterfly" parent="." instance=ExtResource("6_j6l5u")]

[node name="CatchBallArea2D" type="Area2D" parent="."]
position = Vector2(502, 286)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchBallArea2D"]
position = Vector2(6.5, 1)
shape = SubResource("RectangleShape2D_1vgfy")

[node name="Pinball" parent="." instance=ExtResource("6_iotsf")]
position = Vector2(376, -1000)

[node name="ChasingLight" parent="." instance=ExtResource("7_lc2xo")]
position = Vector2(-140, -493)

[node name="ChasingLight2" parent="." instance=ExtResource("7_lc2xo")]
position = Vector2(153, -492)

[node name="ChasingLight3" parent="." instance=ExtResource("7_lc2xo")]
position = Vector2(-317, -1066)

[node name="ChasingLight4" parent="." instance=ExtResource("7_lc2xo")]
position = Vector2(349, -1044)

[node name="ChasingLight5" parent="." instance=ExtResource("7_lc2xo")]
position = Vector2(-113, -1094)

[node name="ChasingLight6" parent="." instance=ExtResource("7_lc2xo")]
position = Vector2(131, -1102)

[node name="ChasingLight7" parent="." instance=ExtResource("7_lc2xo")]
position = Vector2(12, -807)

[connection signal="body_entered" from="CatchBallArea2D" to="." method="_on_catch_ball_area_2d_body_entered"]
